--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,151 @@
-yellowant
-django
+adal==0.6.0
+asn1crypto==0.24.0
+astroid==1.6.4
+awscli==1.14.40
+azure==3.0.0
+azure-batch==4.1.3
+azure-cognitiveservices-language-spellcheck==1.0.0
+azure-cognitiveservices-language-textanalytics==0.1.0
+azure-cognitiveservices-search-customsearch==0.1.0
+azure-cognitiveservices-search-entitysearch==1.0.0
+azure-cognitiveservices-search-imagesearch==1.0.0
+azure-cognitiveservices-search-newssearch==1.0.0
+azure-cognitiveservices-search-videosearch==1.0.0
+azure-cognitiveservices-search-visualsearch==0.1.1
+azure-cognitiveservices-search-websearch==1.0.0
+azure-cognitiveservices-vision-computervision==0.1.0
+azure-cognitiveservices-vision-contentmoderator==0.1.0
+azure-cognitiveservices-vision-customvision==0.2.0
+azure-cognitiveservices-vision-face==0.1.0
+azure-common==1.1.11
+azure-cosmosdb-nspkg==2.0.2
+azure-cosmosdb-table==1.0.3
+azure-datalake-store==0.0.19
+azure-eventgrid==0.1.0
+azure-graphrbac==0.40.0
+azure-keyvault==0.3.7
+azure-mgmt==2.0.0
+azure-mgmt-advisor==1.0.1
+azure-mgmt-applicationinsights==0.1.1
+azure-mgmt-authorization==0.30.0
+azure-mgmt-batch==5.0.0
+azure-mgmt-batchai==0.2.0
+azure-mgmt-billing==0.1.0
+azure-mgmt-botservice==0.1.0
+azure-mgmt-cdn==2.0.0
+azure-mgmt-cognitiveservices==2.0.0
+azure-mgmt-commerce==1.0.1
+azure-mgmt-compute==3.0.1
+azure-mgmt-consumption==2.0.0
+azure-mgmt-containerinstance==0.3.1
+azure-mgmt-containerregistry==1.0.1
+azure-mgmt-containerservice==3.0.1
+azure-mgmt-cosmosdb==0.3.1
+azure-mgmt-datafactory==0.4.0
+azure-mgmt-datalake-analytics==0.3.0
+azure-mgmt-datalake-nspkg==2.0.0
+azure-mgmt-datalake-store==0.3.0
+azure-mgmt-datamigration==0.1.0
+azure-mgmt-devtestlabs==2.2.0
+azure-mgmt-dns==1.2.0
+azure-mgmt-documentdb==0.1.3
+azure-mgmt-eventgrid==0.4.0
+azure-mgmt-eventhub==1.2.0
+azure-mgmt-hanaonazure==0.1.1
+azure-mgmt-iothub==0.4.0
+azure-mgmt-iothubprovisioningservices==0.1.0
+azure-mgmt-keyvault==0.40.0
+azure-mgmt-loganalytics==0.1.0
+azure-mgmt-logic==2.1.0
+azure-mgmt-machinelearningcompute==0.4.0
+azure-mgmt-managementgroups==0.1.0
+azure-mgmt-managementpartner==0.1.0
+azure-mgmt-maps==0.1.0
+azure-mgmt-marketplaceordering==0.1.0
+azure-mgmt-media==0.2.0
+azure-mgmt-monitor==0.4.0
+azure-mgmt-msi==0.1.0
+azure-mgmt-network==1.7.1
+azure-mgmt-notificationhubs==1.0.0
+azure-mgmt-nspkg==2.0.0
+azure-mgmt-policyinsights==0.1.0
+azure-mgmt-powerbiembedded==1.0.0
+azure-mgmt-rdbms==0.1.0
+azure-mgmt-recoveryservices==0.2.0
+azure-mgmt-recoveryservicesbackup==0.1.1
+azure-mgmt-redis==5.0.0
+azure-mgmt-relay==0.1.0
+azure-mgmt-reservations==0.1.0
+azure-mgmt-resource==1.2.2
+azure-mgmt-scheduler==1.1.3
+azure-mgmt-search==1.0.0
+azure-mgmt-servermanager==1.2.0
+azure-mgmt-servicebus==0.4.0
+azure-mgmt-servicefabric==0.1.0
+azure-mgmt-signalr==0.1.0
+azure-mgmt-sql==0.8.6
+azure-mgmt-storage==1.5.0
+azure-mgmt-subscription==0.1.0
+azure-mgmt-trafficmanager==0.40.0
+azure-mgmt-web==0.34.1
+azure-nspkg==2.0.0
+azure-sdk-testutils==0.0.0
+azure-servicebus==0.21.1
+azure-servicefabric==6.1.2.9
+azure-servicemanagement-legacy==0.20.7
+azure-storage-blob==1.1.0
+azure-storage-common==1.1.0
+azure-storage-file==1.1.0
+azure-storage-nspkg==3.0.0
+azure-storage-queue==1.1.0
+botocore==1.8.44
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+colorama==0.3.7
+cryptography==2.2.2
+dj-database-url==0.5.0
+Django==2.0.6
+docutils==0.14
+entrypoints==0.2.3
+futures==3.1.1
+gunicorn==19.8.1
+haikunator==2.1.0
+heroku==0.1.4
+idna==2.6
+isodate==0.6.0
+isort==4.3.4
+jmespath==0.9.3
+keyring==12.2.1
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+msrest==0.4.29
+msrestazure==0.4.31
+mysqlclient==1.3.12
+oauthlib==2.0.7
+psycopg2==2.7.4
+psycopg2-binary==2.7.4
+pyaml==17.12.1
+pyasn1==0.4.2
+pycparser==2.18
+PyJWT==1.6.3
+pylint==1.9.1
+pylint-django==0.11.1
+pylint-plugin-utils==0.2.6
+python-dateutil==2.1
+pytz==2018.3
+PyYAML==3.12
+rauth==0.7.3
+requests==2.18.4
+requests-oauthlib==0.8.0
+requirements==0.1
+rsa==3.4.2
+s3transfer==0.1.13
+six==1.11.0
+socketIO-client==0.7.2
+urllib3==1.22
+websocket-client==0.47.0
+whitenoise==3.3.1
+wrapt==1.10.11
+yellowant==0.0.35
