--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.3.7
 cryptography==2.2.2
 dj-database-url==0.5.0
 Django==2.0.6
+django-cors-headers-2.2.0
 docutils==0.14
 entrypoints==0.2.3
 futures==3.1.1
